syntax = "proto3";
package osmosis.claim.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/bank/v1beta1/genesis.proto";

option go_package = "github.com/osmosis-labs/osmosis/v7/x/claim/types";

enum Action {
  option (gogoproto.goproto_enum_prefix) = false;

  ActionAddLiquidity = 0;
  ActionSwap = 1;
  ActionVote = 2;
  ActionDelegateStake = 3;
}

// A Claim Records is the metadata of claim data per address
message ClaimRecord {
  // address of claim user
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];

  // total initial claimable amount for the user
  repeated cosmos.base.v1beta1.Coin initial_claimable_amount = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"initial_claimable_amount\""
  ];

  // true if action is completed
  // index of bool in array refers to action enum #
  repeated bool action_completed = 3
      [ (gogoproto.moretags) = "yaml:\"action_completed\"" ];
}