syntax = "proto3";
package osmosis.claim.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/bank/v1beta1/genesis.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "osmosis/claim/v1beta1/claim.proto";
import "osmosis/claim/v1beta1/params.proto";

option go_package = "github.com/osmosis-labs/osmosis/v7/x/claim/types";

// GenesisState defines the claim module's genesis state.
message GenesisState {
  // balance of the claim module's account
  cosmos.base.v1beta1.Coin module_account_balance = 1 [
    (gogoproto.moretags) = "yaml:\"module_account_balance\"",
    (gogoproto.nullable) = false
  ];

  // params defines all the parameters of the module.
  Params params = 2 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];

  // list of claim records, one for every airdrop recipient
  repeated ClaimRecord claim_records = 3 [
    (gogoproto.moretags) = "yaml:\"claim_records\"",
    (gogoproto.nullable) = false
  ];
}
